--- a/src/assets/CSS/chat.css
+++ b/src/assets/CSS/chat.css
@@ -10,9 +10,11 @@
 .main-container .contact { 
   max-width: 300px;
   width: 100%;
-  box-shadow: 0 0 15px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 15px 15px 0 rgba(0,0,0,0.2);
   background-color: #f8f8f8;
   border-right: 1px solid #d9d9d9;
+  position: relative;
+  z-index: 9999;
 }
 .main-container .chat {
   max-width: calc(100% - 300px); 
