--- a/src/assets/CSS/chatcontainer.css
+++ b/src/assets/CSS/chatcontainer.css
@@ -29,7 +29,7 @@
 }
 
 .back-icon {
-  padding: 0 4px;
+  cursor: pointer;
 }
 
 .user-profile {
@@ -51,6 +51,7 @@
   width: 64px;
   border-radius: 50%;
   cursor: pointer;
+  flex: 0 0 64px;
 }
 
 .chat-container .messages-container {
@@ -99,6 +100,7 @@
   position: relative;
   overflow: hidden;
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.3);
+  text-transform: none;
 }
 
 .messages-container .messages-send .sender-msg {
